--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,11 +46,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
       - run: |
+          rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
           rustup default nightly
           cargo update
           $env:Path += ";C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Tools\Llvm\bin"
           cargo -Z build-std build --target aarch64-uwp-windows-msvc
-          
+
 #      - uses: actions/upload-artifact@v3
 #        with:
 #          name: win-x64
