--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Cysharp/Actions/.github/actions/setup-dotnet@main
       - run: |
+          rustup toolchain install nightly-x86_64-pc-windows-msvc
           rustup component add rust-src --toolchain nightly-x86_64-pc-windows-msvc
           rustup default nightly
           cargo update
